# matter_engine

./: .gitattributes  .gitignore  AGENTS.md  CMakeLists.txt  README.md
assets/models/: lab_map.glb
assets/models/props/: anvil.glb  anvil.glb.mecollider  car_tire.glb  car_tire.glb.mecollider  plastic_barrel.glb  plastic_barrel.glb.mecollider  soccer_ball.glb  wood_chair.glb  wood_chair.glb.mecollider  wood_crate.glb
assets/shaders/: render2d.vert  scene3d_mesh.frag  scene3d_mesh.vert  scene3d_mesh_depth.vert  scene3d_mesh_shadow.vert  scene3d_sky.frag  scene3d_sky.vert  sprite.frag  sprite.vert  taa_resolve.frag  tonemap.frag  tonemap.vert
cmake/: MatterEngine.rc.in
docs/: ARCHITECTURE.md  PHYSICAL_ASSET_AUTHORING.md  ROADMAP.md
src/: main.cpp
src/Engine/Audio/: AcousticEnvironmentSystem3D.cpp  AcousticEnvironmentSystem3D.hpp  AcousticOcclusion3D.cpp  AcousticOcclusion3D.hpp  AcousticZone3D.hpp  AudioDevice3D.cpp  AudioDevice3D.hpp  BiquadFilter.cpp  BiquadFilter.hpp  Envelope.cpp  Envelope.hpp  ImpactAcoustics.cpp  ImpactAcoustics.hpp  ProceduralNoise.cpp  ProceduralNoise.hpp  Waveform.cpp  Waveform.hpp  WindSound.cpp  WindSound.hpp
src/Engine/Core/: Application.cpp  Application.hpp  Log.cpp  Log.hpp  TaskScheduler.cpp  TaskScheduler.hpp  Version.hpp
src/Engine/Data/: Database.cpp  Database.hpp  SettingsRepository.cpp  SettingsRepository.hpp
src/Engine/Environment/: WindSystem.cpp  WindSystem.hpp
src/Engine/Geometry/: CgltfImpl.cpp  GltfAcousticZone3D.cpp  GltfAcousticZone3D.hpp  GltfLoader.cpp  GltfLoader.hpp  GltfPhysicsMetadata3D.cpp  GltfPhysicsMetadata3D.hpp  MeshData3D.cpp  MeshData3D.hpp  PhysicalAsset3D.cpp  PhysicalAsset3D.hpp  StbImageImpl.cpp
src/Engine/Input/: Input.cpp  Input.hpp
src/Engine/Materials/: MaterialLibrary.cpp  MaterialLibrary.hpp  MaterialTypes.hpp
src/Engine/Math/: Frustum3D.cpp  Frustum3D.hpp  Hash.cpp  Hash.hpp  JitterSequence.cpp  JitterSequence.hpp  Mat4.cpp  Mat4.hpp  Quaternion.cpp  Quaternion.hpp  Ray3D.hpp  ShadowCascade.cpp  ShadowCascade.hpp  Vec2.cpp  Vec2.hpp  Vec3.cpp  Vec3.hpp
src/Engine/Physics/: PhysicalBodyBuilder3D.cpp  PhysicalBodyBuilder3D.hpp  PhysicsEngine3D.hpp  PhysicsScene3D.hpp  PhysicsTypes3D.hpp
src/Engine/Physics/PhysX/: PhysXCooking3D.cpp  PhysXEngine3D.cpp  PhysXInternals3D.hpp  PhysXScene3D.cpp
src/Engine/Platform/: DisplayMode.hpp  PlatformServices.hpp
src/Engine/Platform/SDL3/: SDLInputAdapter.cpp  SDLInputAdapter.hpp  SDLPlatform.cpp  SDLPlatform.hpp
src/Engine/RHI/: RHICommandList.hpp  RHIDevice.hpp  RHIHandles.hpp  RHITypes.hpp
src/Engine/RHI/Vulkan/: ScenePassGraph.cpp  ScenePassGraph.hpp  VulkanDevice.cpp  VulkanDevice.hpp
src/Engine/Render/: Render2D.cpp  Render2D.hpp  Renderer.cpp  Renderer.hpp  Scene3D.hpp  SceneLightPacking.cpp  SceneLightPacking.hpp
src/Engine/UI/: FontAwesome.hpp  ImGuiFontLibrary.cpp  ImGuiFontLibrary.hpp
src/Workbench/: UiKit.cpp  UiKit.hpp  WorkbenchApp.cpp  WorkbenchApp.hpp
src/Workbench/Audio/: WorldAudioController.cpp  WorldAudioController.hpp
src/Workbench/Laboratory/: PropRuntime.cpp
src/Workbench/Props/: PropCatalog.cpp  PropCatalog.hpp
src/Workbench/Screens/: LaboratoryScreen.cpp  MainMenuScreen.cpp  ObjectViewerScreen.cpp  SettingsScreen.cpp
tests/: AudioFoundationTests.cpp  EngineFoundationTests.cpp
tools/: PhysicsAssetCooker.cpp  PhysicsBenchmark.cpp  VulkanSmoke.cpp  build.ps1  check-architecture.cmd  check-architecture.ps1  cook-physics-assets.cmd  cook-physics-assets.ps1  run.ps1  set-glb-collision.ps1  set-glb-mass.ps1
